@@ -3,6 +3,7 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
           - dropped [Test::CheckDeps]
           - xt/ tests are now run before t/
+          - compile test now generated as xt/author/00-compile.t
 
 0.028     2013-10-06 06:17:12Z (Karen Etheridge)
           - injected t/00-check-deps.t no longer bails out when failures are
